# soccer-analytics

./: .env.docker.example  .env.production.example  .gitignore  DEPLOY.md  PHASE0_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  PHASE8_SUMMARY.md  PLAN.md  README.md  SECURITY.md  docker-compose.mock.yml  docker-compose.prod.yml  docker-compose.yml  package.json  render.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  vercel.json
apps/api/analytics/: passes.py  players.py  possession.py  tactical.py  xg.py  zones.py
apps/api/core/: auth.py  config.py  deps.py  logging.py  profiles.py  season_zone_cache.py  supabase_client.py  supabase_errors.py  workspace_access.py  workspace_context.py
apps/api/etl/: cli.py  competitions.py  events.py  matches.py  players.py  preflight.py  presets.py  resolve.py  season_pipeline.py  statsbomb_loader.py  utils.py
apps/api/routers/: analyses.py  analytics_passes.py  analytics_possession.py  analytics_profiles.py  analytics_xg.py  analytics_zones.py  auth.py  competitions.py  events.py  health.py  invitations.py  matches.py  players.py  reports.py  summary.py  workspaces.py
apps/api/schemas/: __init__.py  analysis.py  auth.py  competition.py  error.py  event.py  match.py  params.py  passes.py  possession.py  profiles.py  report.py  workspace.py  xg.py  zones.py
apps/api/scripts/: e2e_server.py
apps/api/services/: __init__.py  event_fetch.py  possession_chains.py  season_scope.py  (+1 more)
(+233 files in other folders)
